--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -29,6 +29,9 @@ jobs:
         with:
           name: hello-artifact
           path: ./artifacts
+
+      - name: validate the downloaded file
+        run: ls -la ./artifacts/
         
       - name: display file content
         run: cat ./artifacts/hello.txt
